tests/paczka1/small_fuzzy/60376177.err
Error in line 3: sn39 S694 18,1
Error in line 6: QDh9pQQC A890 69,7
